--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project</title>
     <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
 <div  class ="container">
@@ -39,10 +40,7 @@
     </div>
     <div class="footer"><h5>MORI</h5></div>
 </div>
-
-
 </body>
-<script src="/build/index.js">
-    
-</script>
+<script src="/build/index.js"></script>
+
 </html>
