--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div  class="header">
         <div class="headlii">
         <ul id="aaa" class="headli">
-            <li class="1a"><a href="index.html">Home</a></li>
-            <li class="1a"><a href="about.html">About</a></li>
-            <li class="1a"><a href="/project.htm">Project</a></li>
+            <li class="1a"><a href="/index.html">Home</a></li>
+            <li class="1a"><a href="/about.html">About</a></li>
+            <li class="1a"><a href="/project.html">Project</a></li>
             <li class="1a"><a href="/blog.html">Blog</a></li>
 
         </ul>
@@ -41,6 +41,43 @@
     <div class="footer"><h5>MORI</h5></div>
 </div>
 </body>
-<script src="/build/index.js"></script>
+<script>
+    const konh1  = document.getElementById("konh1")
+const konh1p  = document.getElementById("konh1p")
+const hider = document.querySelector("aaa")
+
+konh1.innerHTML = "VIOLET EVERGARDEN"
+konh1p.innerHTML = "—Violet's greeting to her clients.";
+
+konh1.addEventListener(
+    "mouseenter",
+    (event) =>{
+        konh1.style.color = "pink"
+
+        setTimeout(() =>{
+            konh1.style.color = "wheat"
+        },8000)
+    }
+)
+
+konh1p.addEventListener(
+    "mouseenter",
+    (event) =>{
+        konh1p.innerHTML = "It is a pleasure to meet you. If it is your wish, I will travel anywhere to meet your request. Auto Memory Doll, Violet Evergarden, at your service."
+       konh1p.style.color = "pink"
+        setTimeout(() =>{
+            konh1p.innerHTML = "—Violet's greeting to her clients."
+        },10000)
+    }
+)
+
+
+
+
+
+
+
+
+</script>
 
 </html>
