--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     </div>
     <div class="content">
         <div id="konten1" class="konten1">
-            <h1 id="konh1" class="konmm"></h1>
-            <p id="konh1p" class="konmm"></p>
+            <h1 id="konh1" class="konmm">violet evergarden</h1>
+            <p id="konhp" class="konmm1">"—Violet's greeting to her clients."            </p>
+            <p id="konhp1" class="konmm2">"It is a pleasure to meet you. If it is your wish, I will travel anywhere to meet your request. Auto Memory Doll, Violet Evergarden, at your service."</p>
         </div>
         <div class="content1">
            
@@ -41,6 +42,6 @@
     <div class="footer"><h5>MORI</h5></div>
 </div>
 </body>
-<script src="/build/index.js"></script>
+<script defer  src="/build/index.js"></script>
 
 </html>
