--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     <div class="footer"><h5>MORI</h5></div>
 </div>
 </body>
-<script defer  src="/build/index.js"></script>
+<script  src="../build/index.js"></script>
 
 </html>
