--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     <div class="footer"><h5>MORI</h5></div>
 </div>
 </body>
-<script  src="https://github.com/moriDumb/moris/blob/65457ca90ab3dbe7d72aa697f3cafc9470d2af4f/build/index.js"></script>
+<script  src="/moris/build.index.js"></script>
 
 </html>
