--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project</title>
     <link rel="stylesheet" href="index.css">
+    <script defer src="build/index.js"></script>
 
 </head>
 <body>
@@ -40,8 +41,10 @@
         <div class="content4"></div>
     </div>
     <div class="footer"><h5>MORI</h5></div>
+    
 </div>
+
 </body>
-<script  src="../build/index.js"></script>
+
 
 </html>
