--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project</title>
     <link rel="stylesheet" href="index.css">
-<<<<<<< HEAD
-    <script defer src="/build/index.js"></script>
-=======
-    <script defer src="/build/index.js"></script>
->>>>>>> 56c996f5bf7e71b6faca5b2a43932b63478fb947
+    <script defer src="build/index.js"></script>
 
 </head>
 <body>
@@ -49,9 +45,6 @@
 </div>
 
 </body>
-<<<<<<< HEAD
 
-=======
->>>>>>> 56c996f5bf7e71b6faca5b2a43932b63478fb947
 
 </html>
