--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project</title>
+    <title>hi!</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="image/OvzHj7eU.png" type="image/x-icon">
 
 </head>
 <body>
