--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div  class="header">
         <div class="headlii">
         <ul id="aaa" class="headli">
-            <li class="1a"><a href="/index">Home</a></li>
-            <li class="1a"><a href="/about">About</a></li>
-            <li class="1a"><a href="/project">Project</a></li>
-            <li class="1a"><a href="/blog">Blog</a></li>
+            <li class="1a"><a href="./index">Home</a></li>
+            <li class="1a"><a href="./about">About</a></li>
+            <li class="1a"><a href="./project">Project</a></li>
+            <li class="1a"><a href="./blog">Blog</a></li>
 
         </ul>
     </div>
