--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
            
         </div>
 
-        <div class="content2">
+        <div class="content2" style="
+        --quantity: 10;
+        ">
 
 
 
@@ -39,6 +41,12 @@
             <div class="content22 as as2 item" style="--position: 2"><img src="image/icon.png" class="kmg" alt=""></div>
             <div class="content23 as as2 item" style="--position: 3"><img src="image/icon.png" class="kmg" alt=""></div>
             <div class="content24 as as4 item" style="--position: 4"><img src="image/icon.png" class="kmg" alt=""></div>
+            <div class="content22 as as2 item" style="--position: 5"><img src="image/icon.png" class="kmg" alt=""></div>
+            <div class="content23 as as2 item" style="--position: 6"><img src="image/icon.png" class="kmg" alt=""></div>
+            <div class="content24 as as4 item" style="--position: 7"><img src="image/icon.png" class="kmg" alt=""></div>
+            <div class="content22 as as2 item" style="--position: 8"><img src="image/icon.png" class="kmg" alt=""></div>
+            <div class="content23 as as2 item" style="--position: 9"><img src="image/icon.png" class="kmg" alt=""></div>
+            <div class="content24 as as4 item" style="--position: 10"><img src="image/icon.png" class="kmg" alt=""></div>
         </div>
 
         <div class="content3">
