--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hi!</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="image/OvzHj7eU.png" type="image/x-icon">
 
 </head>
@@ -32,23 +32,24 @@
         </div>
 
         <div class="content2" style="
+        --width: 200px;
+        --height: 200px;
         --quantity: 10;
         ">
+        <div class="list">
 
-
-
-            <div class="content21 as as1 item" style="--position: 1"><img src="image/icon.png" class="kmg" alt=""></div>
-            <div class="content22 as as2 item" style="--position: 2"><img src="image/icon.png" class="kmg" alt=""></div>
-            <div class="content23 as as2 item" style="--position: 3"><img src="image/icon.png" class="kmg" alt=""></div>
-            <div class="content24 as as4 item" style="--position: 4"><img src="image/icon.png" class="kmg" alt=""></div>
-            <div class="content22 as as2 item" style="--position: 5"><img src="image/icon.png" class="kmg" alt=""></div>
-            <div class="content23 as as2 item" style="--position: 6"><img src="image/icon.png" class="kmg" alt=""></div>
-            <div class="content24 as as4 item" style="--position: 7"><img src="image/icon.png" class="kmg" alt=""></div>
-            <div class="content22 as as2 item" style="--position: 8"><img src="image/icon.png" class="kmg" alt=""></div>
-            <div class="content23 as as2 item" style="--position: 9"><img src="image/icon.png" class="kmg" alt=""></div>
-            <div class="content24 as as4 item" style="--position: 10"><img src="image/icon.png" class="kmg" alt=""></div>
+            <div class="content21 as as1 item" style="--position: 1"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content22 as as2 item" style="--position: 2"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content23 as as2 item" style="--position: 3"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content24 as as4 item" style="--position: 4"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content22 as as2 item" style="--position: 5"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content23 as as2 item" style="--position: 6"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content24 as as4 item" style="--position: 7"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content22 as as2 item" style="--position: 8"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content23 as as2 item" style="--position: 9"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content24 as as4 item" style="--position: 10"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
         </div>
-
+    </div>
         <div class="content3">
      
         </div>
