--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <div class="content22 as as2 item" style="--position: 2"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
             <div class="content23 as as2 item" style="--position: 3"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
             <div class="content24 as as4 item" style="--position: 4"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
-            <div class="content22 as as2 item" style="--position: 5"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
-            <div class="content23 as as2 item" style="--position: 6"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
-            <div class="content24 as as4 item" style="--position: 7"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content22 as as2 item" style="--position: 5"><img src="image/PngItem_3707088.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content23 as as2 item" style="--position: 6"><img src="image/PngItem_3706990.png" width="200px" height="200px" class="kmg" alt=""></div>
+            <div class="content24 as as4 item" style="--position: 7"><img src="image/PngItem_6141077.png" width="200px" height="200px" class="kmg" alt=""></div>
             <div class="content22 as as2 item" style="--position: 8"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
             <div class="content23 as as2 item" style="--position: 9"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
             <div class="content24 as as4 item" style="--position: 10"><img src="image/OvzHj7eU.png" width="200px" height="200px" class="kmg" alt=""></div>
